--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+# Archivos de configuración del IDE
+.vscode/
+
+# Dependencias de Node.js
+node_modules/
+
+# Archivos de compilación
+/dist/
+/build/
+
+# Archivos temporales
+*.log
+*.tmp
+
+# Archivos de configuración del entorno
+.env
 
